tests/error/struct_errors/not_a_class_def.py
from guppylang.decorator import guppy


@guppy.struct
def foo(x: int) -> int:
    return x


guppy.compile(foo)
